# distributed_mmio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.example.yaml
examples/dmmio/: CMakeLists.txt  README.md  distributed_mmio  main.cpp
examples/matrices/: 16x16_dense.bmtx  16x16_dense.mtx
examples/mmio/: CMakeLists.txt  README.md  main.cpp
include/: mmio.h  mmio_utils.h
include/c/: wrapper.h
include/common/: macros.h  mmio.h  mmio_c_wrapper.h  mmio_utils.h
include/distributed/: distributed_mmio.h
include/dmmio/: dio.h  dmmio.h  dutils.h  partitioning.h
include/mmio/: io.h  macros.h  mmio.h  utils.h
scripts/: colors.py  create_dataset.py  generate_data.py  graph500_generator.py  suite_sparse_matrix.py  suite_sparse_matrix_downloader.py  utils.py
src/: dist_csr.cu  mmio.cpp  mmio_utils.cpp
src/bmtx/: mtx_to_bmtx.cpp
src/c/: wrapper.cpp
src/common/: mmio.cpp  mmio_c_wrapper.cpp  mmio_structs.cpp  mmio_utils.cpp
src/distributed/: distributed_mmio.cpp  distributed_mmio_structs.cpp
src/dmmio/: dio.cpp  dmmio.cpp  dutils.cpp  partitioning.cpp
src/mmio/: io.cpp  mmio.cpp  utils.cpp
src/tools/: mtx_to_bmtx.cpp
tests/: CMakeLists.txt  README.md  args.txt  ccutils  configs.yaml  distributed_mmio  generate_partitioning_images.py  jobs.yaml  jobs_show_partitioning.yaml  matrices_partitioning.yaml  matrices_test.yaml  parse_results.py  test_dmmio.cpp  test_matrices.yaml
